infrastructure/k8s/micropay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micropay-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: micropay.local
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micropay-frontend
                port:
                  number: 80
          # API Gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
